# sysloss

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-cd.yml
docs/: Getting started.md  _config.yml  _toc.yml  log.md  references.bib  requirements-doc.txt  tutorials.md
docs/nb/: Battery life.ipynb  Bluetooth sensor.ipynb  Component files.ipynb  Datacenter rack.ipynb  Diagrams.ipynb  PCIe FPGA.ipynb  PoE.ipynb  ROV battery pack.ipynb  Sensor daisy chain.ipynb
src/sysloss/: __init__.py  components.py  diagram.py  system.py  utils.py
tests/: test_sysloss.py
tests/benchmark/: conftest.py  test_bench.py
tests/data/: Future_system.json  System v1.0.0.json  component.toml  converter.toml  iload.toml  linreg.toml  linreg_bad.toml  linreg_new.toml  pload.toml  pmux.toml  pswitch.toml  rect1.toml  rect2.toml  rload.toml  rloss.toml  source.toml  vloss.toml
tests/regression/: test_future.py  test_json_v1.py
tests/unit/: test_comp_arith.py  test_components.py  test_diagram.py  test_system.py  test_utils.py
